# FastSyncAsync

./: .gitignore  justfile  main.py  pyproject.toml
app/: config.py  crud.py  database.py  main.py  schemas.py
