[project]
name = "fastsyncasync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "pre-commit>=4.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A002", "COM812", "D100", "D101", "D102", "D103", "D104", "D106", "D203", "D212", "D400",  "D415", "E501", "EM101", "FIX002", "TD002", "TD003", "TRY003", "PLR0913"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
